--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^1.1",
+        "phpoffice/phpspreadsheet": "^1.28",
         "phpseclib/phpseclib": "^3.0"
     },
     "require-dev": {
